# smt-guidance-experiments

./: .gitignore  Cargo.toml  README.md  bench.fish  flake.nix  get-solution-bench-loop.fish  get-solutions.fish  hello-world.smt2  interesting-cases.md
.helix/: languages.toml
nix/: z3-noodler.nix
python/: main.py  pyproject.toml  runtime-improvements.py
queries/: worse-cases.sql
src/: db.rs  export.rs  main.rs  types.rs
src/model/: bench.rs  mod.rs  problem.rs  solution.rs
